# SEP2

./: .gitignore  README.md  main.py  pyvenv.cfg
docs/: index.md
sep/: ImageGrabber.py  __init__.py
sep2/: pyproject.toml
